--- a/00-vampires-1.html
+++ b/00-vampires-1.html
@@ -48,7 +48,7 @@
           <div>🧛‍♀️ <span class="vampire-name">Caleb</span></div>
         </div>
       </div>
-      <div>🧛‍♀️ <span class="vampire-name">Amhurst</span></div>
+      <div>🧛‍♀️ <span class="vampire-name" id="amhurst">Amhurst</span></div>
       <div>
         🧛‍♀️ <span class="vampire-name">Aurelian</span>
         <div>
@@ -67,8 +67,11 @@
         </div>
       </div>
       <div>🧛‍♀️ <span class="vampire-name">Alphonso</span>
-        <div>🧛‍♀️ <span class="vampire-name">Bartholomew</span></div>
+        <div>🧛‍♀️ <span class="vampire-name" id="bart">Bartholomew</span></div>
       </div>
     </div>
+    <script>
+      console.log(100*5);
+    </script>
   </body>
 </html>
