--- a/06-vampires-clicks-but-jQuery.html
+++ b/06-vampires-clicks-but-jQuery.html
@@ -93,20 +93,10 @@
       ]
     };
 
-    function distanceFromRoot(node, distance=0) {
-      if (node[0].tagName !== 'DIV') return Infinity;
-      const name = node.children('.vampire-name').text();
-      if (name === 'Root') return distance;
-      return distanceFromRoot(node.parent(), distance+1);
-    }
-
     function createVampire(name) {
       const element = $('<div>')
-        .html(`🧛‍♀️ <span class='vampire-name'>${name}</span>`)
-        .on('click', (event) => {
-          event.stopPropagation(); // Something weird happens if you don't stopPropagation 🤔
-          alert(`${name} is ${distanceFromRoot(element)} from the Root`);
-        });
+          .html(`🧛‍♀️ <span class='vampire-name'>${name}</span>`)
+          .on('click', (event) => { event.stopPropagation(); alert('Clicked ' + name); })
       return element[0];
     }
 
