--- a/07-vampires-editor-but-jQuery.html
+++ b/07-vampires-editor-but-jQuery.html
@@ -46,30 +46,33 @@
 <body>
   <script>
     function createVampire(name) {
-      const element = $('<div>').html(`🧛‍♀️ <span class='vampire-name'>${name}</span>`);
-      element.on('click', (event) => {
-          event.stopPropagation();
-          openModalFor(element);
-        });
-      return element;
+      const element = $('<div>')
+          .html(`🧛‍♀️ <span class='vampire-name'>${name}</span>`)
+          .on('click', function(event) {
+            event.stopPropagation();
+            openModalFor($(this));
+          });
+      return element[0];
     }
 
-    function openModalFor(vampire) {
-      const modal = $('<aside>').html(`
-        <h1>🧛‍♀️</h1>
-        <h2>New Vampire</h2>
-        <input id='new-vampire-name' />
-        <button id='new-vampire-create'>Create</button>
-        <button id='new-vampire-cancel'>Cancel</button>
+    function openModalFor(node) {
+      const modal = $(`
+      <aside>
+        <h1>🧛‍♂️</h1>
+        <h2>Create Vampire</h2>
+        <input />
+        <button id='create-button'>Create</button>
+        <button id='cancel-button'>Cancel</button>
+      </aside>
       `);
-      const input = modal.find('#new-vampire-name');
-      modal.find('#new-vampire-cancel').on('click', () => { modal.remove() });
-      modal.find('#new-vampire-create').on('click', () => {
-        $(createVampire(input.val())).appendTo(vampire);
-        modal.remove()
-      });
-      modal.appendTo($('body'));
-      input.focus();
+
+      const input = modal.find('input');
+      const create = modal.find('#create-button');
+      const cancel = modal.find('#cancel-button');
+
+      create.on('click', () => { node.append(createVampire(input.val())); modal.remove() });
+      cancel.on('click', () => { modal.remove() });
+      $('body').append(modal);
     }
 
     $(() => {
